--- a/Portfolio.html
+++ b/Portfolio.html
@@ -56,8 +56,8 @@
             <tr>
                <td align="center">
 	          <figure>
-	          <a target="_blank" href="(enter link to portfolio item **four**)">
-		  <img src="(enter link to image of portfolio item **four**)" height="300" width=auto> </a>
+	          <a target="_blank" href="https://repl.it/@Crismartinez10/story-2-cuh">
+		  <img src="story.JPG" height="300" width=auto> </a>
 	          <figcaption style="max-width: 350px">C)</figcaption>
 	          </figure>
 	                  
