--- a/Portfolio.html
+++ b/Portfolio.html
@@ -56,7 +56,7 @@
             <tr>
                <td align="center">
 	          <figure>
-	          <a target="_blank" href="https://repl.it/@Crismartinez10/story-2-cuh">
+	          <a target="_blank" href="https://story-2-cuh.crismartinez10.repl.run/">
 		  <img src="story.JPG" height="300" width=auto> </a>
 	          <figcaption style="max-width: 350px">C)</figcaption>
 	          </figure>
