--- a/Portfolio.html
+++ b/Portfolio.html
@@ -68,10 +68,10 @@
 	          <figure>
 	          <a target="_blank" href="(enter link to portfolio item **Five**)">
 		  <img src="(enter link to image of portfolio item one)" height="300" width=auto> </a>
-	          <figcaption style="max-width: 350px">(c)</figcaption>
+	          <figcaption style="max-width: 350px">Interactive Game</figcaption>
 	          </figure>
 	                  
-                  (d). 
+                 
 	       </td>
 
 	       <td align="center">
